--- a/bitaddress.org.html
+++ b/bitaddress.org.html
@@ -6130,7 +6130,7 @@
 			<div class="authorpgp">
 				<span class="item"><a href="nhttps://www.bitaddress.org/inja_bitaddress.org.txt" target="_blank" id="footerlabelpgp">PGP Public Key</a></span>
 				<span class="item"><a href="https://www.bitaddress.org/pgpsignedmsg.txt" target="_blank"><span id="footerlabelversion">Signed Version History</span> (v2.5)</a></span>
-				<span class="item"><a href="https://github.com/litecoin-project/liteaddress.org" target="_blank" id="footerlabelgithub">GitHub Repository</a></span>
+				<span class="item"><a href="https://github.com/Anoncoin/jsaddr.anoncoin.net" target="_blank" id="footerlabelgithub">GitHub Repository</a></span>
 			</div>
 			<div class="copyright">
 				<span id="footerlabelcopyright1">Copyright bitaddress.org.</span>
